changed vw to % in layout to fix scrollbar width issue

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -100,9 +100,14 @@ button {
    cursor: pointer;
 }
 
+button:disabled {
+   background-color: gray;
+   cursor: not-allowed;
+}
+
 // page sections
 #routes_top_container {
-   width: 100vw;
+   width: 100%;
    min-height: 80vh;
    display: flex;
    flex-direction: column;
@@ -267,7 +272,6 @@ button {
          .img_container {
             width: 150px;
             margin-right: 1em;
-            box-sizing: border-box;
             background: #fff;
             text-align: center;
             display: flex;
@@ -375,40 +379,33 @@ button {
    }
 }
 
-button#send_email:disabled {
-   background-color: gray;
-   cursor: not-allowed;
-}
+#site_footer {
+   width: 100%;
+   padding: 1em 2.5em 1em;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 
+   p {
+      @include textEmphasis;
+   }
 
-   #site_footer {
-      width: 100%;
-      padding: 1em 2.5em 1em;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+   div {
+      width: 90%;
 
-      p {
-         @include textEmphasis;
-      }
-
-      div {
-         width: 90%;
-
-         ul {
-            display: flex;
-            flex-direction: column;
-         }
-      }
-      
       ul {
-         width: 100%;
-         margin-top: 1.5em;
          display: flex;
-         justify-content: space-between;
+         flex-direction: column;
       }
    }
+   
+   ul {
+      width: 100%;
+      margin-top: 1.5em;
+      display: flex;
+      justify-content: space-between;
+   }
+}
 
 
 @media only screen and (min-width: 800px) {
@@ -533,7 +530,6 @@ button#send_email:disabled {
    }
 
    #site_footer {
-      width: 100%;
       min-height: 20vh;
       flex-direction: row;
       justify-content: center;
